work on chapter 2 and proposed work
git-svn-id: svn+ssh://hal.personalrobotics.ri.cmu.edu/old_svn/etc/people/cdellin/docs/fast-manip@33031

--- a/ch01-intro.tex
+++ b/ch01-intro.tex
@@ -72,7 +72,7 @@ our approach explicitly optimizes for both planning
 and execution effort
 -- what we call the task's \emph{ensemble effort}.
 We apply this reasoning to explicit graphs
-with the E$^8$ search algorithm (Chapter~\ref{chap:inflate})
+with the E$^8$ search algorithm (Chapter~\ref{chap:e8})
 which determines an effort allocation between planning and execution
 in order to minimize total task cost.
 
@@ -309,14 +309,14 @@ for a summary and timeline of proposed work.
    \cite{jaillet2004dynamicprm}};
 
 \node[draw,ellipse,align=center] at (2,7)
-   {E$^8$-PRM\\(Chapter~\ref{chap:inflate})};
+   {E$^8$-PRM\\(Chapter~\ref{chap:e8})};
 
 \node[draw,ellipse,align=center] at (10,7)
    {Multi-Set PRM\\(Chapter~\ref{chap:multi-set-prm})};
 
 \end{tikzpicture}
 \caption{Graphical outline of $\mathcal{C}$-space planners.
-   Work in progress.}
+   \cdnote{Work in progress. I don't really like this as it is.}}
 \label{fig:graphical-outline}
 \end{center}
 \end{widepage}
