--- a/ch05-multiset.tex
+++ b/ch05-multiset.tex
@@ -1,6 +1,8 @@
 \chapter{The Multi-Set Planning Problem}
 \label{chap:multi-set}
 
+This content is currently in submission \cite{dellin2015multiset}.
+
 The purpose of this chapter is to introduce the multi-set planning
 problem,
 talk about its structure in general,
