--- a/ch06-multisetprm.tex
+++ b/ch06-multisetprm.tex
@@ -1,6 +1,8 @@
 \chapter{Applying Greedy PRM to Multi-Set: the Multi-Set Greedy PRM}
 \label{chap:multi-set-prm}
 
+This content is currently in submission \cite{dellin2015multiset}.
+
 \begin{itemize}
 \item GreedyPRM and multi-set are complementary
 \item Apply greeydprm to multi-set problem
