--- a/ch07-cmr.tex
+++ b/ch07-cmr.tex
@@ -1,6 +1,9 @@
 \chapter{Comprehensive Multi-Root Planning}
 \label{chap:cmr}
 
+This work first appeared in
+\cite{dellin2015cmr}.
+
 ABSTRACT:
 We formulate and study the
 \emph{comprehensive multi-root} (CMR) planning problem,
