--- a/ch08-taskplanning.tex
+++ b/ch08-taskplanning.tex
@@ -1,7 +1,7 @@
 \chapter{Task Planning}
 \label{chap:task-planning}
 
-\subsection{The \textsc{Proteus} Task Planner}
+\section{The \textsc{Proteus} Task Planner}
 
 Uses CMR.
 Runs separate Multi-Set PRMs.
@@ -12,3 +12,11 @@ Proteus Reasons Over Task Effort Using Sampling.
 
 To be clear, no symbolic planning here --
 complementary!
+
+\section{Future Work}
+
+\subsection{Learning Good Intermediate Roots}
+\label{subsec:learning-good-intermediate-roots}
+
+This would be a really cool research problem;
+very complementary!
