--- a/fast-manip.tex
+++ b/fast-manip.tex
@@ -167,7 +167,7 @@ and provide an open-source implementation of our planner.
 \label{appendix:gs-proofs}
 
 This appendix presents some proofs relating the path-centric treatment
-of graph search from Chapter~\ref{chap:inflate}
+of graph search from Chapter~\ref{chap:e8}
 to traditional algorithms (e.g. A$^*$).
 
 \begin{invariant}
